--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,7 +20,7 @@ jobs:
 
     - name: 🔧 Install dependencies
       run: |
-        cd backend
+        cd Backend
         npm install
 
     - name: 🧹 Clean & zip backend
