New one update1 index.js & deploy.yaml

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
 
     - name: 🧹 Clean & zip backend
       run: |
-        cd backend
+        cd Backend
         zip -r app.zip . -x "node_modules/*" ".env" ".git/*" ".github/*"
 
     - name: 🚀 Deploy to Elastic Beanstalk
