--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,7 +33,17 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        region: ${{ secrets.AWS_REGION }}
+        region: - name: 🚀 Deploy to Elastic Beanstalk
+  uses: einaregilsson/beanstalk-deploy@v21
+  with:
+    aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    region: us-east-1  # ✅ You can hardcode or use: ${{ secrets.AWS_REGION }}
+    application_name: BookingShowBackend
+    environment_name: BookingShowBackend-env
+    version_label: "v-${{ github.run_number }}"
+    deployment_package: backend/app.zip
+
         application_name: BookingShowBackend
         environment_name: BookingShowBackend-env
         version_label: "v-${{ github.run_number }}"
